spi: dt-bindings: cadence: add missing 'required' (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1347,6 +1347,7 @@
 	patches.kernel.org/5.19.4-129-dt-bindings-arm-qcom-fix-MSM8994-boards-compat.patch
 	patches.kernel.org/5.19.4-130-dt-bindings-clock-qcom-gcc-msm8996-add-more-GC.patch
 	patches.kernel.org/5.19.4-131-dt-bindings-PCI-qcom-Fix-reset-conditional.patch
+	patches.kernel.org/5.19.4-132-spi-dt-bindings-cadence-add-missing-required.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
