--- a/series.conf
+++ b/series.conf
@@ -1501,6 +1501,7 @@
 	patches.kernel.org/5.19.4-283-scsi-lpfc-Prevent-buffer-overflow-crashes-in-d.patch
 	patches.kernel.org/5.19.4-284-scsi-lpfc-Fix-possible-memory-leak-when-failin.patch
 	patches.kernel.org/5.19.4-285-gadgetfs-ep_io-wait-until-IRQ-finishes.patch
+	patches.kernel.org/5.19.4-286-coresight-etm4x-avoid-build-failure-with-unrol.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
