drm/amd/display: Check correct bounds for stream encoder instances for DCN303 (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1227,6 +1227,7 @@
 	patches.kernel.org/5.19.4-009-drm-nouveau-recognise-GA103.patch
 	patches.kernel.org/5.19.4-010-drm-ttm-Fix-dummy-res-NULL-ptr-deref-bug.patch
 	patches.kernel.org/5.19.4-011-drm-amdgpu-Only-disable-prefer_shadow-on-hawai.patch
+	patches.kernel.org/5.19.4-012-drm-amd-display-Check-correct-bounds-for-strea.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
