--- a/series.conf
+++ b/series.conf
@@ -1431,6 +1431,7 @@
 	patches.kernel.org/5.19.4-213-net-dsa-microchip-ksz9477-fix-fdb_dump-last-in.patch
 	patches.kernel.org/5.19.4-214-net-dsa-felix-fix-ethtool-256-511-and-512-1023.patch
 	patches.kernel.org/5.19.4-215-net-mscc-ocelot-fix-incorrect-ndo_get_stats64-.patch
+	patches.kernel.org/5.19.4-216-net-mscc-ocelot-fix-address-of-SYS_COUNT_TX_AG.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
