--- a/series.conf
+++ b/series.conf
@@ -1470,6 +1470,7 @@
 	patches.kernel.org/5.19.4-252-net-mscc-ocelot-make-struct-ocelot_stat_layout.patch
 	patches.kernel.org/5.19.4-253-net-mscc-ocelot-report-ndo_get_stats64-from-th.patch
 	patches.kernel.org/5.19.4-254-x86-ibt-objtool-Add-IBT_NOSEAL.patch
+	patches.kernel.org/5.19.4-255-x86-kvm-Fix-missing-ENDBR-BUG-for-fastop-funct.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
