--- a/series.conf
+++ b/series.conf
@@ -1495,6 +1495,7 @@
 	patches.kernel.org/5.19.4-277-usb-dwc2-gadget-remove-D-pull-up-while-no-vbus.patch
 	patches.kernel.org/5.19.4-278-vboxguest-Do-not-use-devm-for-irq.patch
 	patches.kernel.org/5.19.4-279-clk-qcom-ipq8074-dont-disable-gcc_sleep_clk_sr.patch
+	patches.kernel.org/5.19.4-280-uacce-Handle-parent-device-removal-or-parent-d.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
