net: dsa: microchip: ksz9477: fix fdb_dump last invalid entry (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1428,6 +1428,7 @@
 	patches.kernel.org/5.19.4-210-net-fix-potential-refcount-leak-in-ndisc_route.patch
 	patches.kernel.org/5.19.4-211-net-rtnetlink-fix-module-reference-count-leak-.patch
 	patches.kernel.org/5.19.4-212-net-sched-fix-misuse-of-qcpu-backlog-in-gnet_s.patch
+	patches.kernel.org/5.19.4-213-net-dsa-microchip-ksz9477-fix-fdb_dump-last-in.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
