--- a/series.conf
+++ b/series.conf
@@ -1261,6 +1261,7 @@
 	patches.kernel.org/5.19.4-043-apparmor-Fix-failed-mount-permission-check-err.patch
 	patches.kernel.org/5.19.4-044-apparmor-fix-aa_label_asxprint-return-check.patch
 	patches.kernel.org/5.19.4-045-apparmor-fix-setting-unconfined-mode-on-a-load.patch
+	patches.kernel.org/5.19.4-046-apparmor-fix-overlapping-attachment-computatio.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
