--- a/series.conf
+++ b/series.conf
@@ -1420,6 +1420,7 @@
 	patches.kernel.org/5.19.4-202-powerpc-pci-Fix-get_phb_number-locking.patch
 	patches.kernel.org/5.19.4-203-spi-meson-spicc-add-local-pow2-clock-ops-to-pr.patch
 	patches.kernel.org/5.19.4-204-net-sunrpc-fix-potential-memory-leaks-in-rpc_s.patch
+	patches.kernel.org/5.19.4-205-net-dsa-mv88e6060-prevent-crash-on-an-unused-p.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
