--- a/series.conf
+++ b/series.conf
@@ -1413,6 +1413,7 @@
 	patches.kernel.org/5.19.4-195-netfilter-nf_tables-possible-module-reference-.patch
 	patches.kernel.org/5.19.4-196-netfilter-nf_tables-really-skip-inactive-sets-.patch
 	patches.kernel.org/5.19.4-197-netfilter-nf_tables-fix-scheduling-while-atomi.patch
+	patches.kernel.org/5.19.4-198-netfilter-nf_tables-validate-NFTA_SET_ELEM_OBJ.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
