NTB: ntb_tool: uninitialized heap data in tool_fn_write() (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1361,6 +1361,7 @@
 	patches.kernel.org/5.19.4-143-tools-testing-cxl-Fix-cxl_hdm_decode_init-call.patch
 	patches.kernel.org/5.19.4-144-kbuild-dummy-tools-avoid-tmpdir-leak-in-dummy-.patch
 	patches.kernel.org/5.19.4-145-tools-build-Switch-to-new-openssl-API-for-test.patch
+	patches.kernel.org/5.19.4-146-NTB-ntb_tool-uninitialized-heap-data-in-tool_f.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
