--- a/series.conf
+++ b/series.conf
@@ -1570,6 +1570,7 @@
 	patches.kernel.org/5.19.4-352-f2fs-fix-to-avoid-use-f2fs_bug_on-in-f2fs_new_.patch
 	patches.kernel.org/5.19.4-353-f2fs-fix-to-do-sanity-check-on-segment-type-in.patch
 	patches.kernel.org/5.19.4-354-smb3-check-xattr-value-length-earlier.patch
+	patches.kernel.org/5.19.4-355-powerpc-64-Init-jump-labels-before-parse_early.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
