KVM: PPC: Book3S HV: Fix "rm_exit" entry in debugfs timings (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1534,6 +1534,7 @@
 	patches.kernel.org/5.19.4-316-ext4-avoid-resizing-to-a-partial-cluster-size.patch
 	patches.kernel.org/5.19.4-317-lib-list_debug.c-Detect-uninitialized-lists.patch
 	patches.kernel.org/5.19.4-318-tty-serial-Fix-refcount-leak-bug-in-ucc_uart.c.patch
+	patches.kernel.org/5.19.4-319-KVM-PPC-Book3S-HV-Fix-rm_exit-entry-in-debugfs.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
