tracing/probes: Have kprobes and uprobes use $COMM too (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1250,6 +1250,7 @@
 	patches.kernel.org/5.19.4-032-tracing-eprobes-Do-not-hardcode-comm-as-a-stri.patch
 	patches.kernel.org/5.19.4-033-tracing-eprobes-Fix-reading-of-string-fields.patch
 	patches.kernel.org/5.19.4-034-tracing-eprobes-Have-event-probes-be-consisten.patch
+	patches.kernel.org/5.19.4-035-tracing-probes-Have-kprobes-and-uprobes-use-CO.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
