fscache: don't leak cookie access refs if invalidation is in progress or failed (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1366,6 +1366,7 @@
 	patches.kernel.org/5.19.4-148-xen-xenbus-fix-return-type-in-xenbus_file_read.patch
 	patches.kernel.org/5.19.4-149-tsnep-Fix-tsnep_tx_unmap-error-path-usage.patch
 	patches.kernel.org/5.19.4-150-atm-idt77252-fix-use-after-free-bugs-caused-by.patch
+	patches.kernel.org/5.19.4-151-fscache-don-t-leak-cookie-access-refs-if-inval.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
