--- a/series.conf
+++ b/series.conf
@@ -1237,6 +1237,7 @@
 	patches.kernel.org/5.19.4-019-btrfs-reset-RO-counter-on-block-group-if-we-fa.patch
 	patches.kernel.org/5.19.4-020-btrfs-fix-lost-error-handling-when-looking-up-.patch
 	patches.kernel.org/5.19.4-021-btrfs-fix-warning-during-log-replay-when-bumpi.patch
+	patches.kernel.org/5.19.4-022-drm-amdgpu-change-vram-width-algorithm-for-vra.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
