--- a/series.conf
+++ b/series.conf
@@ -1402,6 +1402,7 @@
 	patches.kernel.org/5.19.4-184-IB-iser-Fix-login-with-authentication.patch
 	patches.kernel.org/5.19.4-185-RDMA-mlx5-Use-the-proper-number-of-ports.patch
 	patches.kernel.org/5.19.4-186-RDMA-cxgb4-fix-accept-failure-due-to-increased.patch
+	patches.kernel.org/5.19.4-187-netfilter-nfnetlink-re-enable-conntrack-expect.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
