tools build: Switch to new openssl API for test-libcrypto (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1360,6 +1360,7 @@
 	patches.kernel.org/5.19.4-142-vdpa_sim_blk-set-number-of-address-spaces-and-.patch
 	patches.kernel.org/5.19.4-143-tools-testing-cxl-Fix-cxl_hdm_decode_init-call.patch
 	patches.kernel.org/5.19.4-144-kbuild-dummy-tools-avoid-tmpdir-leak-in-dummy-.patch
+	patches.kernel.org/5.19.4-145-tools-build-Switch-to-new-openssl-API-for-test.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
