geneve: fix TOS inheriting for ipv4 (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1367,6 +1367,7 @@
 	patches.kernel.org/5.19.4-149-tsnep-Fix-tsnep_tx_unmap-error-path-usage.patch
 	patches.kernel.org/5.19.4-150-atm-idt77252-fix-use-after-free-bugs-caused-by.patch
 	patches.kernel.org/5.19.4-151-fscache-don-t-leak-cookie-access-refs-if-inval.patch
+	patches.kernel.org/5.19.4-152-geneve-fix-TOS-inheriting-for-ipv4.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
