iavf: Fix deadlock in initialization (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1389,6 +1389,7 @@
 	patches.kernel.org/5.19.4-171-iavf-Fix-adminq-error-handling.patch
 	patches.kernel.org/5.19.4-172-iavf-Fix-NULL-pointer-dereference-in-iavf_get_.patch
 	patches.kernel.org/5.19.4-173-iavf-Fix-reset-error-handling.patch
+	patches.kernel.org/5.19.4-174-iavf-Fix-deadlock-in-initialization.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
