dt-bindings: pinctrl: mt8192: Use generic bias instead of pull-*-adv (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1307,6 +1307,7 @@
 	patches.kernel.org/5.19.4-089-dt-bindings-arm-qcom-fix-Alcatel-OneTouch-Idol.patch
 	patches.kernel.org/5.19.4-090-pinctrl-renesas-rzg2l-Return-EINVAL-for-pins-w.patch
 	patches.kernel.org/5.19.4-091-dt-bindings-pinctrl-mt8192-Add-drive-strength-.patch
+	patches.kernel.org/5.19.4-092-dt-bindings-pinctrl-mt8192-Use-generic-bias-in.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
