dt-bindings: pinctrl: mt8186: Add and use drive-strength-microamp (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1314,6 +1314,7 @@
 	patches.kernel.org/5.19.4-096-dt-bindings-pinctrl-mt8195-Fix-name-for-mediat.patch
 	patches.kernel.org/5.19.4-097-dt-bindings-pinctrl-mt8195-Add-and-use-drive-s.patch
 	patches.kernel.org/5.19.4-098-pinctrl-sunxi-Add-I-O-bias-setting-for-H6-R-PI.patch
+	patches.kernel.org/5.19.4-099-dt-bindings-pinctrl-mt8186-Add-and-use-drive-s.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
