--- a/series.conf
+++ b/series.conf
@@ -1486,6 +1486,7 @@
 	patches.kernel.org/5.19.4-268-scsi-ufs-core-Add-UFSHCD_QUIRK_HIBERN_FASTAUTO.patch
 	patches.kernel.org/5.19.4-269-irqchip-tegra-Fix-overflow-implicit-truncation.patch
 	patches.kernel.org/5.19.4-270-drm-meson-Fix-overflow-implicit-truncation-war.patch
+	patches.kernel.org/5.19.4-271-clk-ti-Stop-using-legacy-clkctrl-names-for-oma.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
