dt-bindings: input: iqs7222: Extend slider-mapped GPIO to IQS7222C (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1327,6 +1327,7 @@
 	patches.kernel.org/5.19.4-109-Input-iqs7222-remove-support-for-RF-filter.patch
 	patches.kernel.org/5.19.4-110-dt-bindings-input-iqs7222-Remove-support-for-R.patch
 	patches.kernel.org/5.19.4-111-dt-bindings-input-iqs7222-Correct-bottom-speed.patch
+	patches.kernel.org/5.19.4-112-dt-bindings-input-iqs7222-Extend-slider-mapped.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
