drm/ttm: Fix dummy res NULL ptr deref bug (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1225,6 +1225,7 @@
 	patches.kernel.org/5.19.4-007-drm-i915-gem-Remove-shared-locking-on-freeing-.patch
 	patches.kernel.org/5.19.4-008-locking-atomic-Make-test_and_-_bit-ordered-on-.patch
 	patches.kernel.org/5.19.4-009-drm-nouveau-recognise-GA103.patch
+	patches.kernel.org/5.19.4-010-drm-ttm-Fix-dummy-res-NULL-ptr-deref-bug.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
