--- a/series.conf
+++ b/series.conf
@@ -1467,6 +1467,7 @@
 	patches.kernel.org/5.19.4-249-KVM-arm64-Reject-32bit-user-PSTATE-on-asymmetr.patch
 	patches.kernel.org/5.19.4-250-net-mscc-ocelot-turn-stats_lock-into-a-spinloc.patch
 	patches.kernel.org/5.19.4-251-net-mscc-ocelot-fix-race-between-ndo_get_stats.patch
+	patches.kernel.org/5.19.4-252-net-mscc-ocelot-make-struct-ocelot_stat_layout.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
