drivers:md:fix a potential use-after-free bug (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1528,6 +1528,7 @@
 	patches.kernel.org/5.19.4-310-md-Notify-sysfs-sync_completed-in-md_reap_sync.patch
 	patches.kernel.org/5.19.4-311-md-raid5-Make-logic-blocking-check-consistent-.patch
 	patches.kernel.org/5.19.4-312-nvmet-tcp-fix-lockdep-complaint-on-nvmet_tcp_w.patch
+	patches.kernel.org/5.19.4-313-drivers-md-fix-a-potential-use-after-free-bug.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
