netfilter: nf_tables: check NFT_SET_CONCAT flag if field_count is specified (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1416,6 +1416,7 @@
 	patches.kernel.org/5.19.4-198-netfilter-nf_tables-validate-NFTA_SET_ELEM_OBJ.patch
 	patches.kernel.org/5.19.4-199-netfilter-nf_tables-NFTA_SET_ELEM_KEY_END-requ.patch
 	patches.kernel.org/5.19.4-200-netfilter-nf_tables-disallow-NFT_SET_ELEM_CATC.patch
+	patches.kernel.org/5.19.4-201-netfilter-nf_tables-check-NFT_SET_CONCAT-flag-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
