apparmor: fix quiet_denied for file rules (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1256,6 +1256,7 @@
 	patches.kernel.org/5.19.4-038-ALSA-hda-Fix-crash-due-to-jack-poll-in-suspend.patch
 	patches.kernel.org/5.19.4-039-dt-bindings-usb-mtk-xhci-Allow-wakeup-interrup.patch
 	patches.kernel.org/5.19.4-040-can-ems_usb-fix-clang-s-Wunaligned-access-warn.patch
+	patches.kernel.org/5.19.4-041-apparmor-fix-quiet_denied-for-file-rules.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
