--- a/series.conf
+++ b/series.conf
@@ -1503,6 +1503,7 @@
 	patches.kernel.org/5.19.4-285-gadgetfs-ep_io-wait-until-IRQ-finishes.patch
 	patches.kernel.org/5.19.4-286-coresight-etm4x-avoid-build-failure-with-unrol.patch
 	patches.kernel.org/5.19.4-287-habanalabs-add-terminating-NULL-to-attrs-array.patch
+	patches.kernel.org/5.19.4-288-habanalabs-gaudi-invoke-device-reset-from-one-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
