net: fix potential refcount leak in ndisc_router_discovery() (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1425,6 +1425,7 @@
 	patches.kernel.org/5.19.4-207-virtio_net-fix-endian-ness-for-RSS.patch
 	patches.kernel.org/5.19.4-208-mlxsw-spectrum-Clear-PTP-configuration-after-u.patch
 	patches.kernel.org/5.19.4-209-net-moxa-pass-pdev-instead-of-ndev-to-DMA-func.patch
+	patches.kernel.org/5.19.4-210-net-fix-potential-refcount-leak-in-ndisc_route.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
