dmaengine: tegra: Add terminate() for Tegra234 (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1520,6 +1520,7 @@
 	patches.kernel.org/5.19.4-302-RDMA-rxe-Limit-the-number-of-calls-to-each-tas.patch
 	patches.kernel.org/5.19.4-303-csky-kprobe-reclaim-insn_slot-on-kprobe-unregi.patch
 	patches.kernel.org/5.19.4-304-selftests-kprobe-Do-not-test-for-GRP-without-e.patch
+	patches.kernel.org/5.19.4-305-dmaengine-tegra-Add-terminate-for-Tegra234.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
