--- a/series.conf
+++ b/series.conf
@@ -1415,6 +1415,7 @@
 	patches.kernel.org/5.19.4-197-netfilter-nf_tables-fix-scheduling-while-atomi.patch
 	patches.kernel.org/5.19.4-198-netfilter-nf_tables-validate-NFTA_SET_ELEM_OBJ.patch
 	patches.kernel.org/5.19.4-199-netfilter-nf_tables-NFTA_SET_ELEM_KEY_END-requ.patch
+	patches.kernel.org/5.19.4-200-netfilter-nf_tables-disallow-NFT_SET_ELEM_CATC.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
