--- a/series.conf
+++ b/series.conf
@@ -1290,6 +1290,7 @@
 	patches.kernel.org/5.19.4-072-m68k-coldfire-device.c-protect-FLEXCAN-blocks.patch
 	patches.kernel.org/5.19.4-073-sunrpc-fix-expiry-of-auth-creds.patch
 	patches.kernel.org/5.19.4-074-SUNRPC-Fix-xdr_encode_bool.patch
+	patches.kernel.org/5.19.4-075-SUNRPC-Reinitialise-the-backchannel-request-bu.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
