virtio_net: fix endian-ness for RSS (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1422,6 +1422,7 @@
 	patches.kernel.org/5.19.4-204-net-sunrpc-fix-potential-memory-leaks-in-rpc_s.patch
 	patches.kernel.org/5.19.4-205-net-dsa-mv88e6060-prevent-crash-on-an-unused-p.patch
 	patches.kernel.org/5.19.4-206-net-qrtr-start-MHI-channel-after-endpoit-creat.patch
+	patches.kernel.org/5.19.4-207-virtio_net-fix-endian-ness-for-RSS.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
