--- a/series.conf
+++ b/series.conf
@@ -1533,6 +1533,7 @@
 	patches.kernel.org/5.19.4-315-ext4-block-range-must-be-validated-before-use-.patch
 	patches.kernel.org/5.19.4-316-ext4-avoid-resizing-to-a-partial-cluster-size.patch
 	patches.kernel.org/5.19.4-317-lib-list_debug.c-Detect-uninitialized-lists.patch
+	patches.kernel.org/5.19.4-318-tty-serial-Fix-refcount-leak-bug-in-ucc_uart.c.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
