Input: iqs7222 - remove support for RF filter (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1324,6 +1324,7 @@
 	patches.kernel.org/5.19.4-106-Input-iqs7222-protect-volatile-registers.patch
 	patches.kernel.org/5.19.4-107-Input-iqs7222-acknowledge-reset-before-writing.patch
 	patches.kernel.org/5.19.4-108-Input-iqs7222-handle-reset-during-ATI.patch
+	patches.kernel.org/5.19.4-109-Input-iqs7222-remove-support-for-RF-filter.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
