--- a/series.conf
+++ b/series.conf
@@ -1284,6 +1284,7 @@
 	patches.kernel.org/5.19.4-066-bpf-Acquire-map-uref-in-.init_seq_private-for-.patch
 	patches.kernel.org/5.19.4-067-bpf-Acquire-map-uref-in-.init_seq_private-for-.patch
 	patches.kernel.org/5.19.4-068-bpf-Check-the-validity-of-max_rdwr_access-for-.patch
+	patches.kernel.org/5.19.4-069-can-mcp251x-Fix-race-condition-on-receive-inte.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
