--- a/series.conf
+++ b/series.conf
@@ -1510,6 +1510,7 @@
 	patches.kernel.org/5.19.4-292-scsi-ufs-ufs-exynos-Change-ufs-phy-control-seq.patch
 	patches.kernel.org/5.19.4-293-pinctrl-intel-Check-against-matching-data-inst.patch
 	patches.kernel.org/5.19.4-294-cxl-Fix-a-memory-leak-in-an-error-handling-pat.patch
+	patches.kernel.org/5.19.4-295-PCI-ACPI-Guard-ARM64-specific-mcfg_quirks.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
