phy: samsung: phy-exynos-pcie: sanitize init/power_on callbacks (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1524,6 +1524,7 @@
 	patches.kernel.org/5.19.4-306-dmaengine-sprd-Cleanup-in-.remove-after-pm_run.patch
 	patches.kernel.org/5.19.4-307-Revert-RDMA-rxe-Create-duplicate-mapping-table.patch
 	patches.kernel.org/5.19.4-308-openrisc-io-Define-iounmap-argument-as-volatil.patch
+	patches.kernel.org/5.19.4-309-phy-samsung-phy-exynos-pcie-sanitize-init-powe.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
