gadgetfs: ep_io - wait until IRQ finishes (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1500,6 +1500,7 @@
 	patches.kernel.org/5.19.4-282-clk-qcom-clk-alpha-pll-fix-clk_trion_pll_confi.patch
 	patches.kernel.org/5.19.4-283-scsi-lpfc-Prevent-buffer-overflow-crashes-in-d.patch
 	patches.kernel.org/5.19.4-284-scsi-lpfc-Fix-possible-memory-leak-when-failin.patch
+	patches.kernel.org/5.19.4-285-gadgetfs-ep_io-wait-until-IRQ-finishes.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
