--- a/series.conf
+++ b/series.conf
@@ -1543,6 +1543,7 @@
 	patches.kernel.org/5.19.4-325-modules-Ensure-natural-alignment-for-.altinstr.patch
 	patches.kernel.org/5.19.4-326-ASoC-SOF-Intel-cnl-Do-not-process-IPC-reply-be.patch
 	patches.kernel.org/5.19.4-327-ASoC-SOF-Intel-hda-ipc-Do-not-process-IPC-repl.patch
+	patches.kernel.org/5.19.4-328-ASoC-SOF-sof-client-probes-Only-load-the-drive.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
