--- a/series.conf
+++ b/series.conf
@@ -1535,6 +1535,7 @@
 	patches.kernel.org/5.19.4-317-lib-list_debug.c-Detect-uninitialized-lists.patch
 	patches.kernel.org/5.19.4-318-tty-serial-Fix-refcount-leak-bug-in-ucc_uart.c.patch
 	patches.kernel.org/5.19.4-319-KVM-PPC-Book3S-HV-Fix-rm_exit-entry-in-debugfs.patch
+	patches.kernel.org/5.19.4-320-vfio-Clear-the-caps-buf-to-NULL-after-free.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
