--- a/series.conf
+++ b/series.conf
@@ -1484,6 +1484,7 @@
 	patches.kernel.org/5.19.4-266-PCI-aardvark-Fix-reporting-Slot-capabilities-o.patch
 	patches.kernel.org/5.19.4-267-scsi-ufs-core-Add-UFSHCD_QUIRK_BROKEN_64BIT_AD.patch
 	patches.kernel.org/5.19.4-268-scsi-ufs-core-Add-UFSHCD_QUIRK_HIBERN_FASTAUTO.patch
+	patches.kernel.org/5.19.4-269-irqchip-tegra-Fix-overflow-implicit-truncation.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
