apparmor: fix setting unconfined mode on a loaded profile (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1260,6 +1260,7 @@
 	patches.kernel.org/5.19.4-042-apparmor-fix-absroot-causing-audited-secids-to.patch
 	patches.kernel.org/5.19.4-043-apparmor-Fix-failed-mount-permission-check-err.patch
 	patches.kernel.org/5.19.4-044-apparmor-fix-aa_label_asxprint-return-check.patch
+	patches.kernel.org/5.19.4-045-apparmor-fix-setting-unconfined-mode-on-a-load.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
