nios2: fix syscall restart checks (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1383,6 +1383,7 @@
 	patches.kernel.org/5.19.4-165-nios2-page-fault-et.al.-are-not-restartable-sy.patch
 	patches.kernel.org/5.19.4-166-nios2-don-t-leave-NULLs-in-sys_call_table.patch
 	patches.kernel.org/5.19.4-167-nios2-traced-syscall-does-need-to-check-the-sy.patch
+	patches.kernel.org/5.19.4-168-nios2-fix-syscall-restart-checks.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
