drm/i915/gt: Invalidate TLB of the OA unit at TLB invalidations (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1239,6 +1239,7 @@
 	patches.kernel.org/5.19.4-021-btrfs-fix-warning-during-log-replay-when-bumpi.patch
 	patches.kernel.org/5.19.4-022-drm-amdgpu-change-vram-width-algorithm-for-vra.patch
 	patches.kernel.org/5.19.4-023-drm-i915-gt-Ignore-TLB-invalidations-on-idle-e.patch
+	patches.kernel.org/5.19.4-024-drm-i915-gt-Invalidate-TLB-of-the-OA-unit-at-T.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
