--- a/series.conf
+++ b/series.conf
@@ -1253,6 +1253,7 @@
 	patches.kernel.org/5.19.4-035-tracing-probes-Have-kprobes-and-uprobes-use-CO.patch
 	patches.kernel.org/5.19.4-036-tracing-Have-filter-accept-common_cpu-to-be-co.patch
 	patches.kernel.org/5.19.4-037-ALSA-usb-audio-More-comprehensive-mixer-map-fo.patch
+	patches.kernel.org/5.19.4-038-ALSA-hda-Fix-crash-due-to-jack-poll-in-suspend.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
