iavf: Fix adminq error handling (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1386,6 +1386,7 @@
 	patches.kernel.org/5.19.4-168-nios2-fix-syscall-restart-checks.patch
 	patches.kernel.org/5.19.4-169-nios2-restarts-apply-only-to-the-first-sigfram.patch
 	patches.kernel.org/5.19.4-170-nios2-add-force_successful_syscall_return.patch
+	patches.kernel.org/5.19.4-171-iavf-Fix-adminq-error-handling.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
