--- a/series.conf
+++ b/series.conf
@@ -1319,6 +1319,7 @@
 	patches.kernel.org/5.19.4-101-rtc-spear-set-range-max.patch
 	patches.kernel.org/5.19.4-102-Input-exc3000-fix-return-value-check-of-wait_f.patch
 	patches.kernel.org/5.19.4-103-Input-mt6779-keypad-match-hardware-matrix-orga.patch
+	patches.kernel.org/5.19.4-104-Input-iqs7222-correct-slider-event-disable-log.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
