--- a/series.conf
+++ b/series.conf
@@ -1377,6 +1377,7 @@
 	patches.kernel.org/5.19.4-159-fs-ntfs3-Fix-using-uninitialized-value-n-when-.patch
 	patches.kernel.org/5.19.4-160-fs-ntfs3-Fix-NULL-deref-in-ntfs_update_mftmirr.patch
 	patches.kernel.org/5.19.4-161-fs-ntfs3-Don-t-clear-upper-bits-accidentally-i.patch
+	patches.kernel.org/5.19.4-162-fs-ntfs3-Fix-double-free-on-remount.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
