arm64: fix rodata=full (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -13886,6 +13886,7 @@
 	patches.suse/net-phy-Don-t-WARN-for-PHY_READY-state-in-mdio_bus_p.patch
 	patches.suse/ratelimit-Fix-data-races-in-___ratelimit.patch
 	patches.suse/arm64-Fix-match_list-for-erratum-1286807-on-Arm-Cort.patch
+	patches.suse/arm64-fix-rodata-full.patch
 
 	########################################################
 	# end of sorted patches
