arm64: Fix match_list for erratum 1286807 on Arm Cortex-A76 (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -13885,6 +13885,7 @@
 	patches.suse/nfc-pn533-Fix-use-after-free-bugs-caused-by-pn532_cm.patch
 	patches.suse/net-phy-Don-t-WARN-for-PHY_READY-state-in-mdio_bus_p.patch
 	patches.suse/ratelimit-Fix-data-races-in-___ratelimit.patch
+	patches.suse/arm64-Fix-match_list-for-erratum-1286807-on-Arm-Cort.patch
 
 	########################################################
 	# end of sorted patches
