--- a/series.conf
+++ b/series.conf
@@ -1359,7 +1359,7 @@
 	patches.kernel.org/5.19.4-141-vdpa_sim-use-max_iotlb_entries-as-a-limit-in-v.patch
 	patches.kernel.org/5.19.4-142-vdpa_sim_blk-set-number-of-address-spaces-and-.patch
 	patches.kernel.org/5.19.4-143-tools-testing-cxl-Fix-cxl_hdm_decode_init-call.patch
-	patches.kernel.org/5.19.4-144-kbuild-dummy-tools-avoid-tmpdir-leak-in-dummy-.patch
++bad	patches.kernel.org/5.19.4-144-kbuild-dummy-tools-avoid-tmpdir-leak-in-dummy-.patch
 	patches.kernel.org/5.19.4-145-tools-build-Switch-to-new-openssl-API-for-test.patch
 	patches.kernel.org/5.19.4-146-NTB-ntb_tool-uninitialized-heap-data-in-tool_f.patch
 	patches.kernel.org/5.19.4-147-nfp-ethtool-fix-the-display-error-of-ethtool-m.patch
