--- a/series.conf
+++ b/series.conf
@@ -13934,6 +13934,7 @@
 	patches.suse/ratelimit-Fix-data-races-in-___ratelimit.patch
 	patches.suse/arm64-Fix-match_list-for-erratum-1286807-on-Arm-Cort.patch
 	patches.suse/arm64-fix-rodata-full.patch
+	patches.suse/ACPI-processor-Remove-freq-Qos-request-for-all-CPUs.patch
 
 	########################################################
 	# end of sorted patches
