--- a/series.conf
+++ b/series.conf
@@ -54713,6 +54713,7 @@
 	patches.suse/NFS-Ensure-the-server-has-an-up-to-date-ctime-before.patch
 	patches.suse/0001-NFSv4-Handle-case-where-the-lookup-of-a-directory-fa.patch
 	patches.suse/NFSv4-nfs_atomic_open-can-race-when-looking-up-a-non.patch
+	patches.suse/SUNRPC-Don-t-dereference-xprt-snd_task-if-it-s-a-cookie.patch
 	patches.suse/rpmsg-char-Fix-race-between-the-release-of-rpmsg_ctr.patch
 	patches.suse/rpmsg-char-Fix-race-between-the-release-of-rpmsg_ept.patch
 	patches.suse/drm-vmwgfx-Fix-stale-file-descriptors-on-failed-user.patch
