--- a/series.conf
+++ b/series.conf
@@ -9505,6 +9505,7 @@
 	patches.suse/ext4-modify-the-logic-of-ext4_mb_new_blocks_simple.patch
 	patches.suse/ext4-fix-error-handling-in-ext4_restore_inline_data.patch
 	patches.suse/ext4-fix-error-handling-in-ext4_fc_record_modified_i.patch
+	patches.suse/ext4-fix-incorrect-type-issue-during-replay_del_rang.patch
 	patches.suse/ima-fix-reference-leak-in-asymmetric_verify.patch
 	patches.suse/integrity-check-the-return-value-of-audit_log_start.patch
 	patches.suse/ima-Remove-ima_policy-file-before-directory.patch
