usbnet: Fix linkwatch use-after-free on disconnect (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -56494,6 +56494,7 @@
 	patches.suse/ACPI-video-Shortening-quirk-list-by-identifying-Clev.patch
 	patches.suse/thermal-tools-tmon-Include-pthread-and-time-headers-.patch
 	patches.suse/wifi-rtlwifi-fix-error-codes-in-rtl_debugfs_set_writ.patch
+	patches.suse/usbnet-Fix-linkwatch-use-after-free-on-disconnect.patch
 	patches.suse/can-Break-loopback-loop-on-loopback-documentation.patch
 	patches.suse/usbnet-smsc95xx-Fix-deadlock-on-runtime-resume.patch
 	patches.suse/ath10k-do-not-enforce-interrupt-trigger-type.patch
