usb: dwc3: ep0: Fix delay status handling (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -45949,6 +45949,7 @@
 	patches.suse/xfs-fix-scrub-flagging-rtinherit-even-if-there-is-no.patch
 	patches.suse/usb-dwc3-pci-add-support-for-the-Intel-Alder-Lake-S.patch
 	patches.suse/usb-gadget-goku_udc-fix-potential-crashes-in-probe.patch
+	patches.suse/usb-dwc3-ep0-Fix-delay-status-handling.patch
 	patches.suse/usb-dwc2-Avoid-leaving-the-error_debugfs-label-unuse.patch
 	patches.suse/USB-Add-NO_LPM-quirk-for-Kingston-flash-drive.patch
 	patches.suse/usb-mtu3-fix-panic-in-mtu3_gadget_stop.patch
