kABI: scsi: libiscsi: fix removal of iscsi_create_conn (bsc#1198410).

--- a/series.conf
+++ b/series.conf
@@ -14422,6 +14422,7 @@
 
 	patches.kabi/kABI-fix-change-of-iscsi_host_remove-arguments.patch
 	patches.kabi/kABI-fix-removal-of-iscsi_destroy_conn.patch
+	patches.kabi/kABI-scsi-libiscsi-fix-removal-of-iscsi_create_conn.patch
 
 	patches.kabi/kABI-fix-adding-field-to-scsi_device.patch
 	patches.kabi/kABI-fix-adding-field-to-ufs_hba.patch
