--- a/series.conf
+++ b/series.conf
@@ -7817,6 +7817,7 @@
 	patches.suse/tomoyo-use-hwight16-in-tomoyo_domain_quota_is_ok.patch
 	patches.suse/ipmi-ssif-initialize-ssif_info-client-early.patch
 	patches.suse/ipmi-bail-out-if-init_srcu_struct-fails.patch
+	patches.suse/ipmi-fix-initialization-when-workqueue-allocation-fa.patch
 	patches.suse/ipmi-Fix-UAF-when-uninstall-ipmi_si-and-ipmi_msghand.patch
 	patches.suse/memblock-fix-memblock_phys_alloc-section-mismatch-er.patch
 	patches.suse/tee-handle-lookup-of-shm-with-reference-count-0.patch
