--- a/series.conf
+++ b/series.conf
@@ -7573,6 +7573,7 @@
 	patches.suse/USB-serial-option-add-support-for-Cinterion-CLS8-dev.patch
 	patches.suse/USB-serial-keyspan-fix-NULL-derefs-on-open-and-write.patch
 	patches.suse/driver-core-platform-Add-platform_get_irq_byname_opt.patch
+	patches.suse/usb-dwc3-Switch-to-platform_get_irq_byname_optional.patch
 	patches.suse/USB-usb-skeleton-fix-NULL-deref-on-disconnect.patch
 	patches.suse/USB-usb-skeleton-fix-use-after-free-after-driver-unb.patch
 	patches.suse/USB-legousbtower-fix-use-after-free-on-release.patch
