--- a/series.conf
+++ b/series.conf
@@ -34859,6 +34859,7 @@
 	patches.suse/usb-dwc3-support-continuous-runtime-PM-with-dual-rol.patch
 	patches.suse/usb-dwc3-gadget-Properly-handle-ClearFeature-halt.patch
 	patches.suse/usb-dwc3-gadget-Give-back-staled-requests.patch
+	patches.suse/usb-dwc3-gadget-Remove-unnecessary-checks.patch
 	patches.suse/usb-dwc3-meson-g12a-check-return-of-dwc3_meson_g12a_.patch
 	patches.suse/usb-dwc3-gadget-Properly-handle-failed-kick_transfer.patch
 	patches.suse/usb-dwc3-gadget-Continue-to-process-pending-requests.patch
