- usb: dwc3: gadget: Refactor dwc3_gadget_ep_dequeue (git-fixes). - Refresh   patches.suse/usb-dwc3-add-cancelled-reasons-for-dwc3-requests.patch.

--- a/series.conf
+++ b/series.conf
@@ -34860,6 +34860,7 @@
 	patches.suse/usb-dwc3-gadget-Properly-handle-ClearFeature-halt.patch
 	patches.suse/usb-dwc3-gadget-Give-back-staled-requests.patch
 	patches.suse/usb-dwc3-gadget-Remove-unnecessary-checks.patch
+	patches.suse/usb-dwc3-gadget-Refactor-dwc3_gadget_ep_dequeue.patch
 	patches.suse/usb-dwc3-meson-g12a-check-return-of-dwc3_meson_g12a_.patch
 	patches.suse/usb-dwc3-gadget-Properly-handle-failed-kick_transfer.patch
 	patches.suse/usb-dwc3-gadget-Continue-to-process-pending-requests.patch
