usb: dwc3: gadget: Fix IN endpoint max packet size allocation (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -56298,6 +56298,7 @@
 	patches.suse/drm-i915-reset-Fix-error_state_read-ptr-offset-use.patch
 	patches.suse/USB-serial-io_ti-add-Agilent-E5805A-support.patch
 	patches.suse/USB-serial-option-add-support-for-Cinterion-MV31-wit.patch
+	patches.suse/usb-dwc3-gadget-Fix-IN-endpoint-max-packet-size-allo.patch
 	patches.suse/usb-dwc2-Fix-memory-leak-in-dwc2_hcd_init.patch
 	patches.suse/usb-gadget-lpc32xx_udc-Fix-refcount-leak-in-lpc32xx_.patch
 	patches.suse/usb-gadget-u_ether-fix-regression-in-setting-fixed-M.patch
