--- a/series.conf
+++ b/series.conf
@@ -55592,6 +55592,7 @@
 	patches.suse/cifs-prevent-bad-output-lengths-in-smb2_ioctl_query_info-.patch
 	patches.suse/cifs-fix-NULL-ptr-dereference-in-smb2_ioctl_query_info-.patch
 	patches.suse/xen-blkfront-fix-comment-for-need_copy.patch
+	patches.suse/nvme-fix-RCU-hole-that-allowed-for-endless-looping-i.patch
 	patches.suse/drbd-fix-potential-silent-data-corruption.patch
 	patches.suse/platform-chrome-cros_ec_debugfs-detach-log-reader-wq.patch
 	patches.suse/kvm-x86-mmu-do-compare-and-exchange-of-gpte-via-the-user-address
