--- a/series.conf
+++ b/series.conf
@@ -8062,6 +8062,7 @@
 	patches.suse/x86-sev-use-cc_attr-attribute-to-generalize-string-i-o-unroll
 	patches.suse/x86-sev-rename-mem_encrypt-c-to-mem_encrypt_amd-c
 	patches.suse/x86-sev-move-common-memory-encryption-code-to-mem_encrypt-c
+	patches.suse/powerpc-Avoid-discarding-flags-in-system_call_except.patch
 	patches.suse/x86-mce-amd-edac-mce_amd-add-new-smca-bank-types.patch
 	patches.suse/x86-mce-amd-edac-mce_amd-support-non-uniform-mca-bank-type-enumeration.patch
 	patches.suse/edac-add-rddr5-and-lrddr5-memory-types.patch
