rpm/kernel-source.spec.in: simplify finding of broken symlinks
"find -xtype l" will report them, so use that to make the search a bit
faster (without using shell).

--- a/rpm/kernel-source.spec.in
+++ b/rpm/kernel-source.spec.in
@@ -221,7 +221,7 @@ pushd %{buildroot}/usr/src
 
 # Unpack the vanilla kernel sources
 tar -xf %{S:0}
-find . -type l | while read f; do test -e "$f" || rm -v "$f"; done
+find . -xtype l -delete -printf "deleted '%f'\n"
 if test "%srcversion" != "%kernelrelease%variant"; then
 	mv linux-%srcversion linux-%kernelrelease%variant
 fi
