s390/mm: do not trigger write fault when vma does not allow VM_WRITE (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -56839,6 +56839,7 @@
 	patches.suse/net_sched-cls_route-disallow-handle-of-0.patch
 	patches.suse/tracing-probes-Have-kprobes-and-uprobes-use-COMM-too.patch
 	patches.suse/af_key-Do-not-call-xfrm_probe_algs-in-parallel.patch
+	patches.suse/s390-mm-do-not-trigger-write-fault-when-vma-does-not-allow-VM_WRITE
 
 	# out-of-tree patches
 	patches.suse/random-fix-crash-on-multiple-early-calls-to-add_bootloader_randomness.patch
