s390/crash: make copy_oldmem_page() return number of bytes copied (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -56365,6 +56365,7 @@
 	patches.suse/drm-sun4i-Fix-crash-during-suspend-after-component-b.patch
 	patches.suse/drm-msm-Fix-double-pm_runtime_disable-call.patch
 	patches.suse/drm-msm-mdp4-Fix-refcount-leak-in-mdp4_modeset_init_.patch
+	patches.suse/s390-crash-make-copy_oldmem_page-return-number-of-bytes-copied
 	patches.suse/regmap-irq-Fix-a-bug-in-regmap_irq_enable-for-type_i.patch
 	patches.suse/mtd-rawnand-gpmi-Fix-setting-busy-timeout-setting.patch
 	patches.suse/gpio-winbond-Fix-error-code-in-winbond_gpio_get.patch
