--- a/series.conf
+++ b/series.conf
@@ -2890,6 +2890,7 @@
 	patches.suse/kvm-x86-allow-cpu-to-force-vendor-specific-tdp-level.patch
 	patches.suse/kvm-x86-mmu-support-shadowing-npt-when-5-level-paging-is-enabled-in-host.patch
 	patches.suse/kvm-svm-add-5-level-page-table-support-for-svm.patch
+	patches.suse/KVM-x86-mmu-Don-t-freak-out-if-pml5_root-is-NULL-on-.patch
 	patches.suse/KVM-VMX-avoid-running-vmx_handle_exit_irqoff-in-case.patch
 	patches.suse/Revert-KVM-x86-mmu-Add-guest-physical-address-check-.patch
 	patches.suse/KVM-s390-Enable-specification-exception-interpretati.patch
