KVM: nVMX: don't use vcpu->arch.efer when checking host state on nested state load (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -7051,6 +7051,7 @@
 	patches.suse/docs-accounting-update-delay-accounting.rst-referenc.patch
 	patches.suse/KVM-x86-Fix-uninitialized-eoi_exit_bitmap-usage-in-v.patch
 	patches.suse/KVM-Fix-steal-time-asm-constraints.patch
+	patches.suse/KVM-nVMX-don-t-use-vcpu-arch.efer-when-checking-host.patch
 	patches.suse/0003-KVM-SEV-Disallow-COPY_ENC_CONTEXT_FROM-if-target-has.patch
 	patches.suse/0002-KVM-SEV-Set-sev_info.active-after-initial-checks-in-.patch
 	patches.suse/0004-KVM-SEV-Drop-a-redundant-setting-of-sev-asid-during-.patch
