--- a/series.conf
+++ b/series.conf
@@ -7238,6 +7238,7 @@
 	patches.suse/arm64-uaccess-avoid-blocking-within-critical-section.patch
 	patches.suse/xen-don-t-continue-xenstore-initialization-in-case-o.patch
 	patches.suse/xen-pvh-add-missing-prototype-to-header.patch
+	patches.suse/xen-detect-uninitialized-xenbus-in-xenbus_init.patch
 	patches.suse/mmc-sdhci-esdhc-imx-disable-CMDQ-support.patch
 	patches.suse/mmc-sdhci-Fix-ADMA-for-PAGE_SIZE-64KiB.patch
 	patches.suse/mmc-spi-Add-device-tree-SPI-IDs.patch
