KVM: x86: ignore APICv if LAPIC is not enabled (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -7335,6 +7335,7 @@
 	patches.suse/KVM-Ensure-local-memslot-copies-operate-on-up-to-dat.patch
 	patches.suse/KVM-x86-mmu-Skip-tlb-flush-if-it-has-been-done-in-za.patch
 	patches.suse/KVM-x86-mmu-Pass-parameter-flush-as-false-in-kvm_tdp.patch
+	patches.suse/KVM-x86-ignore-APICv-if-LAPIC-is-not-enabled.patch
 	patches.suse/selftests-fix-check-for-circular-KVM_CAP_VM_MOVE_ENC.patch
 	patches.suse/KVM-SEV-expose-KVM_CAP_VM_MOVE_ENC_CONTEXT_FROM-capa.patch
 	patches.suse/KVM-nVMX-Flush-current-VPID-L1-vs.-L2-for-KVM_REQ_TL.patch
