--- a/series.conf
+++ b/series.conf
@@ -7342,6 +7342,7 @@
 	patches.suse/KVM-nVMX-Abide-to-KVM_REQ_TLB_FLUSH_GUEST-request-on.patch
 	patches.suse/KVM-nVMX-Emulate-guest-TLB-flush-on-nested-VM-Enter-.patch
 	patches.suse/KVM-selftests-Make-sure-kvm_create_max_vcpus-test-wo.patch
+	patches.suse/KVM-X86-Use-vcpu-arch.walk_mmu-for-kvm_mmu_invlpg.patch
 	patches.suse/KVM-x86-mmu-Use-yield-safe-TDP-MMU-root-iter-in-MMU-.patch
 	patches.suse/KVM-x86-mmu-Remove-spurious-TLB-flushes-in-TDP-MMU-z.patch
 	patches.suse/KVM-SEV-do-not-use-list_replace_init-on-an-empty-lis.patch
