KVM: VMX: prepare sync_pir_to_irr for running with APICv disabled (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -7346,6 +7346,7 @@
 	patches.suse/KVM-x86-mmu-Use-yield-safe-TDP-MMU-root-iter-in-MMU-.patch
 	patches.suse/KVM-x86-mmu-Remove-spurious-TLB-flushes-in-TDP-MMU-z.patch
 	patches.suse/KVM-MMU-shadow-nested-paging-does-not-have-PKU.patch
+	patches.suse/KVM-VMX-prepare-sync_pir_to_irr-for-running-with-API.patch
 	patches.suse/KVM-SEV-do-not-use-list_replace_init-on-an-empty-lis.patch
 	patches.suse/KVM-SEV-cleanup-locking-for-KVM_CAP_VM_MOVE_ENC_CONT.patch
 	patches.suse/KVM-SEV-initialize-regions_list-of-a-mirror-VM.patch
