--- a/series.conf
+++ b/series.conf
@@ -7819,6 +7819,7 @@
 	patches.suse/HID-holtek-fix-mouse-probing.patch
 	patches.suse/HID-potential-dereference-of-null-pointer.patch
 	patches.suse/NFSD-Fix-READDIR-buffer-overflow.patch
+	patches.suse/KVM-x86-remove-PMU-FIXED_CTR3-from-msrs_to_save_all.patch
 	patches.suse/selftests-KVM-Fix-non-x86-compiling.patch
 	patches.suse/KVM-VMX-Fix-stale-docs-for-kvm-intel.emulate_invalid.patch
 	patches.suse/KVM-VMX-Wake-vCPU-when-delivering-posted-IRQ-even-if.patch
