--- a/series.conf
+++ b/series.conf
@@ -7821,6 +7821,7 @@
 	patches.suse/NFSD-Fix-READDIR-buffer-overflow.patch
 	patches.suse/KVM-x86-remove-PMU-FIXED_CTR3-from-msrs_to_save_all.patch
 	patches.suse/selftests-KVM-Fix-non-x86-compiling.patch
+	patches.suse/KVM-nVMX-Synthesize-TRIPLE_FAULT-for-L2-if-emulation.patch
 	patches.suse/KVM-VMX-Fix-stale-docs-for-kvm-intel.emulate_invalid.patch
 	patches.suse/KVM-VMX-Wake-vCPU-when-delivering-posted-IRQ-even-if.patch
 	patches.suse/PM-sleep-Fix-error-handling-in-dpm_prepare.patch
