--- a/series.conf
+++ b/series.conf
@@ -9195,6 +9195,7 @@
 	patches.suse/HID-wacom-Avoid-using-stale-array-indicies-to-read-c.patch
 	patches.suse/Documentation-fix-firewire.rst-ABI-file-path-error.patch
 	patches.suse/KVM-x86-mmu-Fix-write-protection-of-PTs-mapped-by-th.patch
+	patches.suse/KVM-VMX-switch-blocked_vcpu_on_cpu_lock-to-raw-spinl.patch
 	patches.suse/selftests-kvm-x86-Fix-the-warning-in-lib-x86_64-proc.patch
 	patches.suse/scripts-dtc-dtx_diff-remove-broken-example-from-help.patch
 	patches.suse/scsi-qedf-Fix-potential-dereference-of-NULL-pointer
