KVM: LAPIC: Also cancel preemption timer during SET_LAPIC (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -9319,6 +9319,7 @@
 	patches.suse/s390-module-fix-loading-modules-with-a-lot-of-relocations
 	patches.suse/s390-hypfs-include-z-VM-guests-with-access-control-group-set
 	patches.suse/KVM-selftests-Re-enable-access_tracking_perf_test.patch
+	patches.suse/KVM-LAPIC-Also-cancel-preemption-timer-during-SET_LA.patch
 	patches.suse/KVM-x86-nSVM-skip-eax-alignment-check-for-non-SVM-in.patch
 	patches.suse/KVM-SVM-Never-reject-emulation-due-to-SMAP-errata-fo.patch
 	patches.suse/KVM-SVM-hyper-v-Enable-Enlightened-MSR-Bitmap-suppor.patch
