blacklist.conf: Add two commits
5102bb1c9f82 psi: Fix "defined but not used" warnings when CONFIG_PROC_FS=n
ec2444530612 psi: Fix "no previous prototype" warnings when CONFIG_CGROUPS=n

--- a/blacklist.conf
+++ b/blacklist.conf
@@ -372,3 +372,5 @@ d41b60359ffb24a39c93ea1f4bffaafd651118c3 # Documentation fix
 ef34a0ae7a2654bc9e58675e36898217fb2799d8 # ALSA: fasync: may break kABI, only for corner cases
 95cc637c1afd83fb7dd3d7c8a53710488f4caf9c # ALSA: fasync: may break kABI, only for corner cases
 4a971e84a7ae10a38d875cd2d4e487c8d1682ca3 # ALSA: fasync: may break kABI, only for corner cases
+5102bb1c9f82857a3164af9d7ab7ad628cb783ed # not relevant for our configs
+ec2444530612a886b406e2830d7f314d1a07d4bb # not relevant for our configs
