KVM: SVM: Don't intercept #GP for SEV guests (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -9322,6 +9322,7 @@
 	patches.suse/KVM-LAPIC-Also-cancel-preemption-timer-during-SET_LA.patch
 	patches.suse/KVM-x86-nSVM-skip-eax-alignment-check-for-non-SVM-in.patch
 	patches.suse/KVM-SVM-Never-reject-emulation-due-to-SMAP-errata-fo.patch
+	patches.suse/KVM-SVM-Don-t-intercept-GP-for-SEV-guests.patch
 	patches.suse/KVM-SVM-hyper-v-Enable-Enlightened-MSR-Bitmap-suppor.patch
 	patches.suse/KVM-SVM-drop-unnecessary-code-in-svm_hv_vmcb_dirty_n.patch
 	patches.suse/KVM-selftests-Don-t-skip-L2-s-VMCALL-in-SMM-test-for.patch
