--- a/series.conf
+++ b/series.conf
@@ -9679,6 +9679,7 @@
 	patches.suse/HID-Add-support-for-UGTABLET-WP5540.patch
 	patches.suse/HID-amd_sfh-Correct-the-structure-field-name.patch
 	patches.suse/Revert-svm-Add-warning-message-for-AVIC-IPI-invalid-.patch
+	patches.suse/KVM-x86-SVM-don-t-passthrough-SMAP-SMEP-PKE-bits-in-.patch
 	patches.suse/KVM-x86-SVM-move-avic-definitions-from-AMD-s-spec-to-svm.h
 	patches.suse/selftests-kvm-Remove-absent-target-file.patch
 	patches.suse/KVM-x86-pmu-Use-AMD64_RAW_EVENT_MASK-for-PERF_TYPE_R.patch
