--- a/series.conf
+++ b/series.conf
@@ -10579,6 +10579,7 @@
 	patches.suse/arm64-dts-broadcom-Fix-sata-nodename.patch
 	patches.suse/arm64-dts-rockchip-Fix-SDIO-regulator-supply-propert.patch
 	patches.suse/TOMOYO-fix-__setup-handlers-return-values.patch
+	patches.suse/KVM-x86-mmu-Move-invalid-check-out-of-kvm_tdp_mmu_ge.patch
 	patches.suse/KVM-x86-hyper-v-Fix-the-maximum-number-of-sparse-ban.patch
 	patches.suse/KVM-x86-Fix-emulation-in-writing-cr8.patch
 	patches.suse/KVM-x86-emulator-Defer-not-present-segment-check-in-.patch
