--- a/series.conf
+++ b/series.conf
@@ -13953,6 +13953,7 @@
 	patches.suse/ALSA-usb-audio-Add-quirk-for-LH-Labs-Geek-Out-HD-Aud.patch
 	patches.suse/wifi-mac80211-Don-t-finalize-CSA-in-IBSS-mode-if-sta.patch
 	patches.suse/wifi-cfg80211-debugfs-fix-return-type-in-ht40allow_m.patch
+	patches.suse/Bluetooth-L2CAP-Fix-build-errors-in-some-archs.patch
 
 	########################################################
 	# end of sorted patches
