--- a/series.conf
+++ b/series.conf
@@ -13947,6 +13947,7 @@
 	patches.suse/ACPI-processor-Remove-freq-Qos-request-for-all-CPUs.patch
 	patches.suse/asm-generic-sections-refactor-memory_intersects.patch
 	patches.suse/ALSA-seq-oss-Fix-data-race-for-max_midi_devs-access.patch
+	patches.suse/ALSA-seq-Fix-data-race-at-module-auto-loading.patch
 
 	########################################################
 	# end of sorted patches
