--- a/series.conf
+++ b/series.conf
@@ -13946,6 +13946,7 @@
 	patches.suse/arm64-fix-rodata-full.patch
 	patches.suse/ACPI-processor-Remove-freq-Qos-request-for-all-CPUs.patch
 	patches.suse/asm-generic-sections-refactor-memory_intersects.patch
+	patches.suse/ALSA-seq-oss-Fix-data-race-for-max_midi_devs-access.patch
 
 	########################################################
 	# end of sorted patches
