wifi: mac80211: Don't finalize CSA in IBSS mode if state is disconnected (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -13951,6 +13951,7 @@
 	patches.suse/ALSA-hda-intel-nhlt-Correct-the-handling-of-fmt_conf.patch
 	patches.suse/ALSA-hda-realtek-Add-speaker-AMP-init-for-Samsung-la.patch
 	patches.suse/ALSA-usb-audio-Add-quirk-for-LH-Labs-Geek-Out-HD-Aud.patch
+	patches.suse/wifi-mac80211-Don-t-finalize-CSA-in-IBSS-mode-if-sta.patch
 
 	########################################################
 	# end of sorted patches
