ALSA: hda: intel-nhlt: Correct the handling of fmt_config flexible array (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -13948,6 +13948,7 @@
 	patches.suse/asm-generic-sections-refactor-memory_intersects.patch
 	patches.suse/ALSA-seq-oss-Fix-data-race-for-max_midi_devs-access.patch
 	patches.suse/ALSA-seq-Fix-data-race-at-module-auto-loading.patch
+	patches.suse/ALSA-hda-intel-nhlt-Correct-the-handling-of-fmt_conf.patch
 
 	########################################################
 	# end of sorted patches
