--- a/series.conf
+++ b/series.conf
@@ -13952,6 +13952,7 @@
 	patches.suse/ALSA-hda-realtek-Add-speaker-AMP-init-for-Samsung-la.patch
 	patches.suse/ALSA-usb-audio-Add-quirk-for-LH-Labs-Geek-Out-HD-Aud.patch
 	patches.suse/wifi-mac80211-Don-t-finalize-CSA-in-IBSS-mode-if-sta.patch
+	patches.suse/wifi-cfg80211-debugfs-fix-return-type-in-ht40allow_m.patch
 
 	########################################################
 	# end of sorted patches
