KVM: VMX: Refuse to load kvm_intel if EPT and NX are disabled (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -51414,6 +51414,7 @@
 	patches.suse/sched-rt-Fix-RT-utilization-tracking-during-policy-c.patch
 	patches.suse/x86-elf-use-bitul-macro-in-uapi-headers.patch
 	patches.suse/kvm-nvmx-ensure-64-bit-shift-when-checking-vmfunc-bi.patch
+	patches.suse/KVM-VMX-Refuse-to-load-kvm_intel-if-EPT-and-NX-are-d.patch
 	patches.suse/KVM-nVMX-Handle-split-lock-AC-exceptions-that-happen.patch
 	patches.suse/media-mdk-mdp-fix-pm_runtime_get_sync-usage-count.patch
 	patches.suse/media-sh_vou-fix-pm_runtime_get_sync-usage-count.patch
