--- a/series.conf
+++ b/series.conf
@@ -52372,6 +52372,7 @@
 	patches.suse/scsi-ibmvfc-Fix-command-state-accounting-and-stale-r.patch
 	patches.suse/pipe-increase-minimum-default-pipe-size-to-2-pages.patch
 	patches.suse/pcmcia-i82092-fix-a-null-pointer-dereference-bug.patch
+	patches.suse/KVM-x86-accept-userspace-interrupt-only-if-no-event-.patch
 	patches.suse/tracing-histogram-Give-calculation-hist_fields-a-size.patch
 	patches.suse/tracing-Reject-string-operand-in-the-histogram-expression.patch
 	patches.suse/Bluetooth-defer-cleanup-of-resources-in-hci_unregist.patch
