Drop a wrongly picked up batmna-adv patch
Blacklist it as well

--- a/blacklist.conf
+++ b/blacklist.conf
@@ -376,3 +376,5 @@ ef34a0ae7a2654bc9e58675e36898217fb2799d8 # ALSA: fasync: may break kABI, only fo
 ec2444530612a886b406e2830d7f314d1a07d4bb # not relevant for our configs
 dc0075ba7f387fe4c48a8c674b11ab6f374a6acc # ACPI: PM: causing a regression
 39d332de8edb1a9076d90d34ec032c098597b5e5 # ACPI: PM: reverting the above in stable tree
+94da81e2fc4285db373fe9a1eb012c2ee205b110 # batman-adv: bogus pickup by stable, reverted
+0cac1c84e1ccdd71924c644f83e24f5ef47d6f7c # batman-adv: reverting the above in stable tree
