drm/amd/display: Add option to defer works of hpd_rx_irq (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -5926,6 +5926,7 @@
 	patches.suse/drm-amd-display-Set-min-dcfclk-if-pipe-count-is-0.patch
 	patches.suse/drm-amd-display-Limit-max-DSC-target-bpp-for-specifi.patch
 	patches.suse/drm-amd-display-Update-swizzle-mode-enums.patch
+	patches.suse/drm-amd-display-Add-option-to-defer-works-of-hpd_rx_.patch
 	patches.suse/drm-amd-display-Revert-Directly-retrain-link-from-de.patch
 	patches.suse/drm-amdgpu-Drop-inline-from-amdgpu_ras_eeprom_max_re.patch
 	patches.suse/drm-amdgpu-Fix-MMIO-access-page-fault.patch
