drm/amd/display: Optimize bandwidth on following fast update (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -5928,6 +5928,7 @@
 	patches.suse/drm-amd-display-Update-swizzle-mode-enums.patch
 	patches.suse/drm-amd-display-Add-option-to-defer-works-of-hpd_rx_.patch
 	patches.suse/drm-amd-display-Revert-Directly-retrain-link-from-de.patch
+	patches.suse/drm-amd-display-Optimize-bandwidth-on-following-fast.patch
 	patches.suse/drm-amdgpu-Drop-inline-from-amdgpu_ras_eeprom_max_re.patch
 	patches.suse/drm-amdgpu-Fix-MMIO-access-page-fault.patch
 	patches.suse/drm-amd-display-Use-adjusted-DCN301-watermarks.patch
