mm/rmap: Fix anon_vma->degree ambiguity leading to double-reuse (git-fixes). kABI: Fix kABI after "mm/rmap: Fix anon_vma->degree ambiguity leading to double-reuse" (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -13978,6 +13978,7 @@
 	patches.suse/ACPI-processor-Remove-freq-Qos-request-for-all-CPUs.patch
 	patches.suse/asm-generic-sections-refactor-memory_intersects.patch
 	patches.suse/HID-steam-Prevent-NULL-pointer-dereference-in-steam_.patch
+	patches.suse/mm-rmap-Fix-anon_vma-degree-ambiguity-leading-to-double-reuse.patch
 	patches.suse/ALSA-seq-oss-Fix-data-race-for-max_midi_devs-access.patch
 	patches.suse/ALSA-seq-Fix-data-race-at-module-auto-loading.patch
 	patches.suse/ALSA-hda-intel-nhlt-Correct-the-handling-of-fmt_conf.patch
@@ -14534,6 +14535,8 @@
 	patches.kabi/SUNRPC-Fix-NFSD-s-request-deferral-on-RDMA-transport-kabi.patch
 
 	patches.kabi/sched-fair-Fix-cfs_rq_clock_pelt-for-throttled-cfs_rq-kabi.patch
+
+	patches.kabi/kABI-Fix-kABI-after-mm-rmap-Fix-anon_vma-degree-ambi.patch
 
 	########################################################
 	# SLE15-SP3 OOT performance patches evaluated but left
