--- a/series.conf
+++ b/series.conf
@@ -5957,6 +5957,7 @@
 	patches.suse/drm-i915-guc-Reset-LRC-descriptor-if-register-return.patch
 	patches.suse/drm-i915-Replace-the-unconditional-clflush-with-drm_.patch
 	patches.suse/drm-amd-display-Enable-PSR-by-default-on-newer-DCN.patch
+	patches.suse/drm-amd-display-Fix-surface-optimization-regression-.patch
 	patches.suse/drm-amd-display-fix-null-pointer-deref-when-plugging.patch
 	patches.suse/drm-amd-pm-Fix-incorrect-power-limit-readback-in-smu.patch
 	patches.suse/drm-amdkfd-fix-boot-failure-when-iommu-is-disabled-i.patch
