--- a/series.conf
+++ b/series.conf
@@ -56683,6 +56683,7 @@
 	patches.suse/usb-typec-ucsi-Acknowledge-the-GET_ERROR_STATUS-comm.patch
 	patches.suse/staging-rtl8192u-Fix-sleep-in-atomic-context-bug-in-.patch
 	patches.suse/USB-Follow-up-to-SPDX-identifiers-addition-remove-no.patch
+	patches.suse/KVM-nVMX-Snapshot-pre-VM-Enter-BNDCFGS-for-nested_ru.patch
 	patches.suse/HID-cp2112-prevent-a-buffer-overflow-in-cp2112_xfer.patch
 	patches.suse/platform-olpc-Fix-uninitialized-data-in-debugfs-writ.patch
 	patches.suse/gpio-gpiolib-of-Fix-refcount-bugs-in-of_mm_gpiochip_.patch
