blacklist.conf: add dbac14a5a05f, as it would break kabi

--- a/blacklist.conf
+++ b/blacklist.conf
@@ -1603,3 +1603,4 @@ d11219ad53dcf61ced53ca60fe0c4a8d34393e6c # revereted by c653c591789b3acfa4bf6ae4
 c653c591789b3acfa4bf6ae45d5af4f330e50a91 # reverets d11219ad53dcf61ced53ca60fe0c4a8d34393e6c
 118a4417e14348b2e46f5e467da8444ec4757a45 # cleanup following 90ea1c6436d2 ("random: remove the blocking pool") which was not taken
 14c174633f349cb41ea90c2c0aaddac157012f74 # tracepoints removal cleanup, not a bug
+dbac14a5a05ff8e1ce7c0da0e1f520ce39ec62ea # removal of export would break kabi
