--- a/series.conf
+++ b/series.conf
@@ -12572,6 +12572,7 @@
 	patches.suse/netfilter-nf_tables-sanitize-nft_set_desc_concat_par.patch
 	patches.suse/octeontx2-af-fix-error-code-in-is_valid_offset.patch
 	patches.suse/wifi-mac80211-fix-use-after-free-in-chanctx-code.patch
+	patches.suse/ax25-Fix-ax25-session-cleanup-problems.patch
 	patches.suse/ARM-pxa-maybe-fix-gpio-lookup-tables.patch
 	patches.suse/soc-rockchip-Fix-refcount-leak-in-rockchip_grf_init.patch
 	patches.suse/ARM-dts-aspeed-ast2600-evb-Enable-RX-delay-for-MAC0-.patch
