blacklist.conf: add ax25 entry that isn't applicable to SLE15-SP4 kernel

--- a/blacklist.conf
+++ b/blacklist.conf
@@ -378,3 +378,4 @@ dc0075ba7f387fe4c48a8c674b11ab6f374a6acc # ACPI: PM: causing a regression
 39d332de8edb1a9076d90d34ec032c098597b5e5 # ACPI: PM: reverting the above in stable tree
 94da81e2fc4285db373fe9a1eb012c2ee205b110 # batman-adv: bogus pickup by stable, reverted
 0cac1c84e1ccdd71924c644f83e24f5ef47d6f7c # batman-adv: reverting the above in stable tree
+d7c4c9e075f8cc6d88d277bc24e5d99297f03c06 # ax25: we haven't backported dev_*_track()
