--- a/series.conf
+++ b/series.conf
@@ -13971,6 +13971,7 @@
 	patches.suse/arm64-fix-rodata-full.patch
 	patches.suse/ACPI-processor-Remove-freq-Qos-request-for-all-CPUs.patch
 	patches.suse/asm-generic-sections-refactor-memory_intersects.patch
+	patches.suse/HID-steam-Prevent-NULL-pointer-dereference-in-steam_.patch
 	patches.suse/ALSA-seq-oss-Fix-data-race-for-max_midi_devs-access.patch
 	patches.suse/ALSA-seq-Fix-data-race-at-module-auto-loading.patch
 	patches.suse/ALSA-hda-intel-nhlt-Correct-the-handling-of-fmt_conf.patch
