Drop usbnet patches that caused problems on stable 5.15

--- a/blacklist.conf
+++ b/blacklist.conf
@@ -379,3 +379,7 @@ dc0075ba7f387fe4c48a8c674b11ab6f374a6acc # ACPI: PM: causing a regression
 94da81e2fc4285db373fe9a1eb012c2ee205b110 # batman-adv: bogus pickup by stable, reverted
 0cac1c84e1ccdd71924c644f83e24f5ef47d6f7c # batman-adv: reverting the above in stable tree
 d7c4c9e075f8cc6d88d277bc24e5d99297f03c06 # ax25: we haven't backported dev_*_track()
+7b960c967f2aa01ab8f45c5a0bd78e754cffdeee # usbnet:smsc95xx: reverted in stable below
+7ae43647f499509aeba22c761e2345eee26e4cd0 # usbnet:smsc95xx: reverting the above in stable-5.15
+1ce8b37241ed291af56f7a49bbdbf20c08728e88 # usbnet:smsc95xx: reverted in stable below
+6ee82524b0aa6433944db7a3999b9e122eb4d48f # usbnet:smsc95xx: reverting the above in stable-5.15
