--- a/series.conf
+++ b/series.conf
@@ -13979,6 +13979,7 @@
 	patches.suse/wifi-cfg80211-debugfs-fix-return-type-in-ht40allow_m.patch
 	patches.suse/Bluetooth-L2CAP-Fix-build-errors-in-some-archs.patch
 	patches.suse/ieee802154-adf7242-defer-destroy_workqueue-call.patch
+	patches.suse/ethernet-rocker-fix-sleep-in-atomic-context-bug-in-n.patch
 
 	########################################################
 	# end of sorted patches
