--- a/series.conf
+++ b/series.conf
@@ -13980,6 +13980,7 @@
 	patches.suse/Bluetooth-L2CAP-Fix-build-errors-in-some-archs.patch
 	patches.suse/ieee802154-adf7242-defer-destroy_workqueue-call.patch
 	patches.suse/ethernet-rocker-fix-sleep-in-atomic-context-bug-in-n.patch
+	patches.suse/kcm-fix-strp_init-order-and-cleanup.patch
 
 	########################################################
 	# end of sorted patches
