--- a/series.conf
+++ b/series.conf
@@ -13966,6 +13966,7 @@
 	patches.suse/net-phy-Don-t-WARN-for-PHY_READY-state-in-mdio_bus_p.patch
 	patches.suse/af_key-Do-not-call-xfrm_probe_algs-in-parallel.patch
 	patches.suse/ratelimit-Fix-data-races-in-___ratelimit.patch
+	patches.suse/loop-Check-for-overflow-while-configuring-loop.patch
 	patches.suse/arm64-Fix-match_list-for-erratum-1286807-on-Arm-Cort.patch
 	patches.suse/arm64-fix-rodata-full.patch
 	patches.suse/fbdev-fbcon-Properly-revert-changes-when-vc_resize-f.patch
