--- a/series.conf
+++ b/series.conf
@@ -13967,6 +13967,7 @@
 	patches.suse/af_key-Do-not-call-xfrm_probe_algs-in-parallel.patch
 	patches.suse/ratelimit-Fix-data-races-in-___ratelimit.patch
 	patches.suse/loop-Check-for-overflow-while-configuring-loop.patch
+	patches.suse/nouveau-explicitly-wait-on-the-fence-in-nouveau_bo_m.patch
 	patches.suse/arm64-Fix-match_list-for-erratum-1286807-on-Arm-Cort.patch
 	patches.suse/arm64-fix-rodata-full.patch
 	patches.suse/fbdev-fbcon-Properly-revert-changes-when-vc_resize-f.patch
