--- a/series.conf
+++ b/series.conf
@@ -13902,6 +13902,7 @@
 	patches.suse/pinctrl-sunxi-Add-I-O-bias-setting-for-H6-R-PIO.patch
 	patches.suse/pinctrl-qcom-sm8250-Fix-PDC-map.patch
 	patches.suse/Input-exc3000-fix-return-value-check-of-wait_for_com.patch
+	patches.suse/Input-i8042-move-__initconst-to-fix-code-styling-war.patch
 	patches.suse/ceph-use-correct-index-when-encoding-client-supported-features.patch
 	patches.suse/ceph-don-t-leak-snap_rwsem-in-handle_cap_grant.patch
 	patches.suse/ceph-don-t-truncate-file-in-atomic_open.patch
