--- a/series.conf
+++ b/series.conf
@@ -13904,6 +13904,7 @@
 	patches.suse/Input-exc3000-fix-return-value-check-of-wait_for_com.patch
 	patches.suse/Input-i8042-move-__initconst-to-fix-code-styling-war.patch
 	patches.suse/Input-i8042-merge-quirk-tables.patch
+	patches.suse/Input-i8042-add-TUXEDO-devices-to-i8042-quirk-tables.patch
 	patches.suse/ceph-use-correct-index-when-encoding-client-supported-features.patch
 	patches.suse/ceph-don-t-leak-snap_rwsem-in-handle_cap_grant.patch
 	patches.suse/ceph-don-t-truncate-file-in-atomic_open.patch
