--- a/series.conf
+++ b/series.conf
@@ -13905,6 +13905,7 @@
 	patches.suse/Input-i8042-move-__initconst-to-fix-code-styling-war.patch
 	patches.suse/Input-i8042-merge-quirk-tables.patch
 	patches.suse/Input-i8042-add-TUXEDO-devices-to-i8042-quirk-tables.patch
+	patches.suse/Input-i8042-add-additional-TUXEDO-devices-to-i8042-q.patch
 	patches.suse/ceph-use-correct-index-when-encoding-client-supported-features.patch
 	patches.suse/ceph-don-t-leak-snap_rwsem-in-handle_cap_grant.patch
 	patches.suse/ceph-don-t-truncate-file-in-atomic_open.patch
