--- a/series.conf
+++ b/series.conf
@@ -4133,6 +4133,7 @@
 	patches.suse/net-mscc-ocelot-deny-TX-timestamping-of-non-PTP-pack.patch
 	patches.suse/net-mscc-ocelot-cross-check-the-sequence-id-from-the.patch
 	patches.suse/net-dsa-tag_ocelot-break-circular-dependency-with-oc.patch
+	patches.suse/net-dsa-tag_ocelot_8021q-break-circular-dependency-w.patch
 	patches.suse/net-dsa-felix-break-at-first-CPU-port-during-init-an.patch
 	patches.suse/net-arc-select-CRC32.patch
 	patches.suse/net-korina-select-CRC32.patch
