blacklist.conf: update blacklist

--- a/blacklist.conf
+++ b/blacklist.conf
@@ -383,3 +383,4 @@ d7c4c9e075f8cc6d88d277bc24e5d99297f03c06 # ax25: we haven't backported dev_*_tra
 7ae43647f499509aeba22c761e2345eee26e4cd0 # usbnet:smsc95xx: reverting the above in stable-5.15
 1ce8b37241ed291af56f7a49bbdbf20c08728e88 # usbnet:smsc95xx: reverted in stable below
 6ee82524b0aa6433944db7a3999b9e122eb4d48f # usbnet:smsc95xx: reverting the above in stable-5.15
+a6785bd7d83c9e73c6a6aa33d30a071460074728 # there is no a76053707dbf ("dev_ioctl: split out ndo_eth_ioctl")
