--- a/series.conf
+++ b/series.conf
@@ -56844,6 +56844,7 @@
 	patches.suse/scsi-lpfc-Rework-MIB-Rx-Monitor-debug-info-logic.patch
 	patches.suse/scsi-lpfc-Add-warning-notification-period-to-CMF_SYN.patch
 	patches.suse/scsi-lpfc-Remove-SANDiags-related-code.patch
+	patches.suse/scsi-lpfc-Update-lpfc-version-to-14.2.0.6.patch
 
 	# out-of-tree patches
 	patches.suse/random-fix-crash-on-multiple-early-calls-to-add_bootloader_randomness.patch
