--- a/series.conf
+++ b/series.conf
@@ -56838,6 +56838,9 @@
 	patches.suse/tracing-probes-Have-kprobes-and-uprobes-use-COMM-too.patch
 	patches.suse/af_key-Do-not-call-xfrm_probe_algs-in-parallel.patch
 
+	# mkp/scsi queue
+	patches.suse/scsi-lpfc-Fix-unsolicited-FLOGI-receive-handling-dur.patch
+
 	# out-of-tree patches
 	patches.suse/random-fix-crash-on-multiple-early-calls-to-add_bootloader_randomness.patch
 
