scsi: lpfc: Add warning notification period to CMF_SYNC_WQE (bsc#1203063).

--- a/series.conf
+++ b/series.conf
@@ -56842,6 +56842,7 @@
 	patches.suse/scsi-lpfc-Fix-unsolicited-FLOGI-receive-handling-dur.patch
 	patches.suse/scsi-lpfc-Fix-null-ndlp-ptr-dereference-in-abnormal-.patch
 	patches.suse/scsi-lpfc-Rework-MIB-Rx-Monitor-debug-info-logic.patch
+	patches.suse/scsi-lpfc-Add-warning-notification-period-to-CMF_SYN.patch
 
 	# out-of-tree patches
 	patches.suse/random-fix-crash-on-multiple-early-calls-to-add_bootloader_randomness.patch
