scsi: lpfc: Check the return value of alloc_workqueue() (bsc#1203063).

--- a/series.conf
+++ b/series.conf
@@ -56832,6 +56832,7 @@
 	patches.suse/ALSA-usb-audio-More-comprehensive-mixer-map-for-ASUS.patch
 	patches.suse/ALSA-hda-realtek-Add-a-quirk-for-HP-OMEN-15-8786-mut.patch
 	patches.suse/ALSA-hda-cirrus-support-for-iMac-12-1-model.patch
+	patches.suse/scsi-lpfc-Check-the-return-value-of-alloc_workqueue.patch
 	patches.suse/NTB-ntb_tool-uninitialized-heap-data-in-tool_fn_writ.patch
 	patches.suse/net_sched-cls_route-disallow-handle-of-0.patch
 	patches.suse/tracing-probes-Have-kprobes-and-uprobes-use-COMM-too.patch
