--- a/series.conf
+++ b/series.conf
@@ -56845,6 +56845,7 @@
 	patches.suse/scsi-lpfc-Add-warning-notification-period-to-CMF_SYN.patch
 	patches.suse/scsi-lpfc-Remove-SANDiags-related-code.patch
 	patches.suse/scsi-lpfc-Update-lpfc-version-to-14.2.0.6.patch
+	patches.suse/scsi-lpfc-Copyright-updates-for-14.2.0.6-patches.patch
 
 	# out-of-tree patches
 	patches.suse/random-fix-crash-on-multiple-early-calls-to-add_bootloader_randomness.patch
