--- a/series.conf
+++ b/series.conf
@@ -56841,6 +56841,7 @@
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Fix-unsolicited-FLOGI-receive-handling-dur.patch
 	patches.suse/scsi-lpfc-Fix-null-ndlp-ptr-dereference-in-abnormal-.patch
+	patches.suse/scsi-lpfc-Rework-MIB-Rx-Monitor-debug-info-logic.patch
 
 	# out-of-tree patches
 	patches.suse/random-fix-crash-on-multiple-early-calls-to-add_bootloader_randomness.patch
