--- a/series.conf
+++ b/series.conf
@@ -13726,6 +13726,7 @@
 	patches.suse/scsi-lpfc-Fix-possible-memory-leak-when-failing-to-i.patch
 	patches.suse/scsi-lpfc-Fix-attempted-FA-PWWN-usage-after-feature-.patch
 	patches.suse/scsi-lpfc-Fix-lost-NVMe-paths-during-LIF-bounce-stre.patch
+	patches.suse/scsi-lpfc-Revert-RSCN_MEMENTO-workaround-for-misbeha.patch
 	patches.suse/scsi-qla2xxx-Fix-incorrect-display-of-max-frame-size.patch
 	patches.suse/scsi-qla2xxx-Zero-undefined-mailbox-IN-registers.patch
 	patches.suse/scsi-qla2xxx-Fix-response-queue-handler-reading-stal.patch
