--- a/series.conf
+++ b/series.conf
@@ -13730,6 +13730,7 @@
 	patches.suse/scsi-lpfc-Refactor-lpfc_nvmet_prep_abort_wqe-into-lp.patch
 	patches.suse/scsi-lpfc-Remove-Menlo-Hornet-related-code.patch
 	patches.suse/scsi-lpfc-Update-lpfc-version-to-14.2.0.5.patch
+	patches.suse/scsi-lpfc-Copyright-updates-for-14.2.0.5-patches.patch
 	patches.suse/scsi-qla2xxx-Fix-incorrect-display-of-max-frame-size.patch
 	patches.suse/scsi-qla2xxx-Zero-undefined-mailbox-IN-registers.patch
 	patches.suse/scsi-qla2xxx-Fix-response-queue-handler-reading-stal.patch
