--- a/series.conf
+++ b/series.conf
@@ -13719,6 +13719,7 @@
 	patches.suse/scsi-qedi-Use-QEDI_MODE_NORMAL-for-error-handling.patch
 	patches.suse/scsi-iscsi-Fix-session-removal-on-shutdown.patch
 	patches.suse/scsi-qla2xxx-Check-correct-variable-in-qla24xx_async.patch
+	patches.suse/scsi-lpfc-Fix-uninitialized-cqe-field-in-lpfc_nvme_c.patch
 	patches.suse/scsi-qla2xxx-Fix-incorrect-display-of-max-frame-size.patch
 	patches.suse/scsi-qla2xxx-Zero-undefined-mailbox-IN-registers.patch
 	patches.suse/scsi-qla2xxx-Fix-response-queue-handler-reading-stal.patch
