--- a/series.conf
+++ b/series.conf
@@ -13724,6 +13724,7 @@
 	patches.suse/scsi-lpfc-Set-PU-field-when-providing-D_ID-in-XMIT_E.patch
 	patches.suse/scsi-lpfc-Remove-extra-atomic_inc-on-cmd_pending-in-.patch
 	patches.suse/scsi-lpfc-Fix-possible-memory-leak-when-failing-to-i.patch
+	patches.suse/scsi-lpfc-Fix-attempted-FA-PWWN-usage-after-feature-.patch
 	patches.suse/scsi-qla2xxx-Fix-incorrect-display-of-max-frame-size.patch
 	patches.suse/scsi-qla2xxx-Zero-undefined-mailbox-IN-registers.patch
 	patches.suse/scsi-qla2xxx-Fix-response-queue-handler-reading-stal.patch
