scsi: lpfc: Remove extra atomic_inc on cmd_pending in queuecommand after VMID (bsc#1201956).

--- a/series.conf
+++ b/series.conf
@@ -13722,6 +13722,7 @@
 	patches.suse/scsi-lpfc-Fix-uninitialized-cqe-field-in-lpfc_nvme_c.patch
 	patches.suse/scsi-lpfc-Prevent-buffer-overflow-crashes-in-debugfs.patch
 	patches.suse/scsi-lpfc-Set-PU-field-when-providing-D_ID-in-XMIT_E.patch
+	patches.suse/scsi-lpfc-Remove-extra-atomic_inc-on-cmd_pending-in-.patch
 	patches.suse/scsi-qla2xxx-Fix-incorrect-display-of-max-frame-size.patch
 	patches.suse/scsi-qla2xxx-Zero-undefined-mailbox-IN-registers.patch
 	patches.suse/scsi-qla2xxx-Fix-response-queue-handler-reading-stal.patch
