mwifiex: Ignore BTCOEX events from the 88W8897 firmware (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -8296,6 +8296,7 @@
 	patches.suse/rtw89-add-AXIDMA-and-TX-FIFO-dump-in-mac_mem_dump.patch
 	patches.suse/rtw88-add-quirk-to-disable-pci-caps-on-HP-250-G7-Not.patch
 	patches.suse/mwifiex-Fix-skb_over_panic-in-mwifiex_usb_recv.patch
+	patches.suse/mwifiex-Ignore-BTCOEX-events-from-the-88W8897-firmwa.patch
 	patches.suse/rsi-Fix-use-after-free-in-rsi_rx_done_handler.patch
 	patches.suse/rsi-Fix-out-of-bounds-read-in-rsi_read_pkt.patch
 	patches.suse/libertas_tf-Use-struct_group-for-memcpy-region.patch
