Drop mtd patch that was reverted in the stable tree
It may lead to some data loss, hence reverted in the upstream stable tree.

--- a/blacklist.conf
+++ b/blacklist.conf
@@ -387,3 +387,5 @@ d7c4c9e075f8cc6d88d277bc24e5d99297f03c06 # ax25: we haven't backported dev_*_tra
 a6785bd7d83c9e73c6a6aa33d30a071460074728 # there is no a76053707dbf ("dev_ioctl: split out ndo_eth_ioctl")
 a52ed4866d2b90dd5e4ae9dabd453f3ed8fa3cbc # mwifiex: reverted in the stable patch below
 5f8954e099b8ae96e7de1bb95950e00c85bedd40 # mwifiex: reverting the above
+06781a5026350cde699d2d10c9914a25c1524f45 # mtd: reverted by below stable commit
+c80b15105a08dceffcbb0381f85696b46bce0d1b # mtd: reverting the above in stable
