--- a/series.conf
+++ b/series.conf
@@ -14010,6 +14010,7 @@
 	patches.suse/scsi-lpfc-Add-warning-notification-period-to-CMF_SYN.patch
 	patches.suse/scsi-lpfc-Remove-SANDiags-related-code.patch
 	patches.suse/scsi-lpfc-Update-lpfc-version-to-14.2.0.6.patch
+	patches.suse/scsi-lpfc-Copyright-updates-for-14.2.0.6-patches.patch
 
 	########################################################
 	# end of sorted patches
