scsi: lpfc: Rework MIB Rx Monitor debug info logic (bsc#1203063).

--- a/series.conf
+++ b/series.conf
@@ -14006,6 +14006,7 @@
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Fix-unsolicited-FLOGI-receive-handling-dur.patch
 	patches.suse/scsi-lpfc-Fix-null-ndlp-ptr-dereference-in-abnormal-.patch
+	patches.suse/scsi-lpfc-Rework-MIB-Rx-Monitor-debug-info-logic.patch
 
 	########################################################
 	# end of sorted patches
