scsi: lpfc: Add warning notification period to CMF_SYNC_WQE (bsc#1203063).

--- a/series.conf
+++ b/series.conf
@@ -14007,6 +14007,7 @@
 	patches.suse/scsi-lpfc-Fix-unsolicited-FLOGI-receive-handling-dur.patch
 	patches.suse/scsi-lpfc-Fix-null-ndlp-ptr-dereference-in-abnormal-.patch
 	patches.suse/scsi-lpfc-Rework-MIB-Rx-Monitor-debug-info-logic.patch
+	patches.suse/scsi-lpfc-Add-warning-notification-period-to-CMF_SYN.patch
 
 	########################################################
 	# end of sorted patches
