scsi: lpfc: Update lpfc version to 14.2.0.6 (bsc#1203063).

--- a/series.conf
+++ b/series.conf
@@ -14009,6 +14009,7 @@
 	patches.suse/scsi-lpfc-Rework-MIB-Rx-Monitor-debug-info-logic.patch
 	patches.suse/scsi-lpfc-Add-warning-notification-period-to-CMF_SYN.patch
 	patches.suse/scsi-lpfc-Remove-SANDiags-related-code.patch
+	patches.suse/scsi-lpfc-Update-lpfc-version-to-14.2.0.6.patch
 
 	########################################################
 	# end of sorted patches
