KVM: x86: Avoid theoretical NULL pointer dereference in kvm_irq_delivery_to_apic_fast() (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -11376,6 +11376,7 @@
 	patches.suse/platform-chrome-cros_ec_debugfs-detach-log-reader-wq.patch
 	patches.suse/msft-hv-2562-PCI-hv-Remove-unused-hv_set_msi_entry_from_desc.patch
 	patches.suse/KVM-x86-Check-lapic_in_kernel-before-attempting-to-s.patch
+	patches.suse/KVM-x86-Avoid-theoretical-NULL-pointer-dereference-i.patch
 	patches.suse/KVM-SVM-Fix-kvm_cache_regs.h-inclusions-for-is_guest.patch
 	patches.suse/KVM-x86-svm-Clear-reserved-bits-written-to-PerfEvtSe.patch
 	patches.suse/KVM-x86-SVM-fix-avic-spec-based-definitions-again
