KVM: VMX: Print VM-instruction error as unsigned (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -13613,6 +13613,7 @@
 	patches.suse/staging-rtl8192u-Fix-sleep-in-atomic-context-bug-in-.patch
 	patches.suse/USB-Follow-up-to-SPDX-identifiers-addition-remove-no.patch
 	patches.suse/USB-Follow-up-to-SPDX-GPL-2.0-identifiers-addition-r.patch
+	patches.suse/KVM-VMX-Print-VM-instruction-error-as-unsigned.patch
 	patches.suse/selftests-kvm-set-rax-before-vmcall.patch
 	patches.suse/HID-wacom-Only-report-rotation-for-art-pen.patch
 	patches.suse/HID-wacom-Don-t-register-pad_input-for-touch-switch.patch
