s390/hypfs: avoid error message under KVM (bsc#1032323).

--- a/series.conf
+++ b/series.conf
@@ -13977,6 +13977,7 @@
 	patches.suse/mmc-pxamci-Fix-another-error-handling-path-in-pxamci.patch
 	patches.suse/mmc-meson-gx-Fix-an-error-handling-path-in-meson_mmc.patch
 	patches.suse/ata-libata-eh-Add-missing-command-name.patch
+	patches.suse/s390-hypfs-avoid-error-message-under-KVM.patch
 	patches.suse/kbuild-fix-the-modules-order-between-drivers-and-lib.patch
 	patches.suse/i2c-imx-Make-sure-to-unregister-adapter-on-remove.patch
 	patches.suse/tracing-probes-Have-kprobes-and-uprobes-use-COMM-too.patch
